# etna

./: .gitignore  BUILD_INSTRUCTIONS.md  Cargo.toml  INSTALL.md  PR_DESCRIPTION.md  README.md  cli_test_model2.json  etna.bat  etna.ps1  etna_cli.py  etna_model_simulation.json  evaluation_report.json  interactive_metrics.py  manage.ps1  mvp_testing.ipynb  predictions_simulation.json  pyproject.toml  requirements.txt  sample_pred.json  sample_true.json  setup.py  test_adam_data.csv  test_metrics_demo.py  test_predictions.json  test_validation_split.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_custom_issue.yml  config.yml
.github/workflows/: greetings.yml  pr-sync.yml  release.yml  test.yml
docs/: cli_guide.md  layer.txt  metrics.md
etna/: __init__.py  api.py  cli.py  metrics.py  preprocessing.py  utils.py
etna_core/: Cargo.toml
etna_core/src/: layers.rs  lib.rs  linear.rs  loss_function.rs  model.rs  optimizer.rs  relu.rs  softmax.rs  utils.rs
examples/: config.json  ground_truth.json  metrics_example.py  quickstart.py  rust_integration_example.py  sample_data.json  test_data.json
test_project/examples/: sample_data.json
test_project/src/: train.py
tests/: test_api.py  test_batch_training.py  test_integration.py  test_metrics.py  test_preprocessing.py  test_preprocessor_persistence.py  test_tqdm_progress.py  test_utils.py
