[build-system]
requires = ["maturin>=1.0,<2.0", "numpy>=1.21.0"]
build-backend = "maturin"

[project]
name = "etsi.etna"
version = "0.1.0"
description = "High-performance neural network framework with a Rust core"
readme = "README.md"
authors = [{name = "Etsi", email = "etsi.hq@gmail.com"}]
license = {text = "BSD-2-Clause"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pyarrow>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
]

[tool.maturin]
module-name = "etna._etna_rust"
manifest-path = "etna_core/Cargo.toml"
python-source = "."

[project.scripts]
etna = "etna.cli:main"
