[package]
name = "etna_rust"
version = "0.1.0"
edition = "2021"
authors = ["ETNA Team"]
description = "Rust core for ETNA: pure neural network backend"
license = "BSD-2-Clause"

[lib]
name = "etna_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"


[build-dependencies]
maturin = "1.4"
