[package]
name = "etna_rust"
version = "0.1.0"
edition = "2021"
authors = ["ETNA Team"]
description = "High-performance core for the etsi-etna library"
repository = "https://github.com/etsi-ai/etna"
homepage = "https://github.com/etsi-ai/etna"
license = "BSD-2-Clause"

[lib]
name = "etna_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
maturin = "1.11"
